# your-obsidian-dream

./: AgentForegroundService (1).kt  AgentForegroundService.kt  AgentWorker.kt  AndroidManifest (1).xml  CODEX.md  Index page lovable.tsx  LOVABLE_INTEGRATION_V2.md  LeapPromptExecutor (3).kt  README.md  VIBO_ROADMAP_FINAL_0000.md  build.gradle.kts  config.toml  crypto (2).ts  default.json  eslint.config.js  event_system.rs  graph.rs  index.html  leapClient.ts  lfm (2).ts  main (2).rs  notes.rs  oauth.rs  package.json  sri.rs  storage.rs  store (4).tsx  tailwind.config.ts  tsconfig.app.json  types (1).ts  wrangler.jsonc
.github/workflows/: audit.yml  ci.yml  release.yml
.lovable/: plan.md
android/app/: proguard-rules.pro
archive/root-duplicates/: README.md  tauriClient.legacy.ts
assets/models/: README.md
assets/roles/: writer.md
codex/: ARCHITECTURE.md  CODEX (1).md  README (2).md  README (3).md  default.md  proguard-rules.pro  worker.ts
docs/: AGENTS.md  API.md  ARCHITECTURE.md  FILE_MAP.md  MODEL_DOWNLOAD_AUDIT.md  STATUS_AUDIT.md  frontend-audit-next-steps.md
scripts/: audit-frontend-rules.sh  audit-model-downloads.sh
src/: App.tsx  index.css  worker.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: google.rs  kanban.rs  lib.rs  main.rs  providers.rs  scheduler.rs  vault.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/koog/: mod.rs
src/components/: CommandPalette.tsx  LockScreen.tsx  NavLink.tsx
src/hooks/: use-wikilinks.ts
src/lib/: crypto.ts  leapClient.ts  lfm.ts  models.ts  store.tsx  tauriClient.ts  templates.ts  types.ts  (+1 more)
(+32 files in other folders)
