[package]
name = "vibo"
version = "0.1.0"
description = "ViBo — Local-first AI knowledge system"
authors = ["ViBo"]
edition = "2021"

[lib]
name = "vibo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri              = { version = "2", features = ["protocol-asset"] }
tauri-plugin-leap-ai   = "0.1.1"
tauri-plugin-sql       = { version = "2", features = ["sqlite"] }
tauri-plugin-fs        = "2"
tauri-plugin-http      = "2"
tauri-plugin-biometric = "2"

serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
tokio              = { version = "1", features = ["full"] }
aes-gcm            = "0.10"
argon2             = "0.5"
reqwest            = { version = "0.12", features = ["json", "stream"] }
uuid               = { version = "1", features = ["v4"] }
chrono             = { version = "0.4", features = ["serde"] }
regex              = "1"
sha2               = "0.10"
base64             = "0.22"
once_cell          = "1"
thiserror          = "2"
futures-util       = "0.3"

# Phase 3 — uncomment when ready
# arti-client       = "0.23"
# tor-rtcompat      = "0.23"

[target.'cfg(target_os = "android")'.dependencies]
# Android-specific overrides if needed

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic   = "abort"
codegen-units = 1
lto     = true
opt-level = "s"
strip   = true
